--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AllProductsMenu">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AllProductsMenu">
    <children>
-      <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" prefWidth="43.0" text="back" />
-      <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" onAction="#performFilter" prefHeight="32.0" prefWidth="106.0" text="Filter" />
+      <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" text="back" />
+      <Button onAction="#performFilter" layoutX="14.0" layoutY="214.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Filter" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="79.0" prefHeight="22.0" prefWidth="89.0" text="Max Price">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -17,11 +23,22 @@
       <Label alignment="CENTER" layoutX="13.0" layoutY="127.0" prefHeight="32.0" prefWidth="89.0" text="Product Name" />
       <TextField fx:id="nameTextField" layoutX="109.0" layoutY="124.0" prefHeight="38.0" prefWidth="106.0" />
       <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
-      <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="140.0" />
+      <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="135.0" />
       <CheckBox fx:id="priceCheckBox" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
-      <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" prefHeight="32.0" prefWidth="106.0" text="Disable All Filters" />
+      <Button onAction="#disableFilter" layoutX="138.0" layoutY="214.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
       <CheckBox fx:id="averageRateCheckBox" layoutX="146.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
-      <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" prefHeight="32.0" prefWidth="106.0" text="Sort" />
-      <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
+      <Button onAction="#performSort" layoutX="14.0" layoutY="321.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Sort" />
+      <Button onAction="#disableSort" layoutX="138.0" layoutY="321.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
+      <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="494.0">
+         <columns>
+            <TableColumn fx:id="nameColumn" prefWidth="75.0" text="ProductId" />
+            <TableColumn fx:id="imageColumn" prefWidth="76.0" text="Image" />
+            <TableColumn fx:id="categoryColumn" prefWidth="70.0" text="Category" />
+            <TableColumn fx:id="priceColumn" prefWidth="56.0" text="Price" />
+            <TableColumn fx:id="averageRateColumn" prefWidth="88.0" text="Average rate" />
+            <TableColumn fx:id="sellerColumn" prefWidth="56.0" text="Seller" />
+            <TableColumn fx:id="buttonColumn" prefWidth="72.0" text="View More" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
