--- a/src/main/java/graphics/fxml/CustomerMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerMenu.fxml
@@ -20,10 +20,10 @@
                     </items>
                 </MenuButton>
                 <Button mnemonicParsing="false" onAction="#goToCartMenu" prefHeight="41.0" prefWidth="146.0" text="View Cart" />
-                <Button fx:id="goToBuyLogPage" mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="My Buy History" />
-                <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="My Discount Codes" />
+                <Button fx:id="goToBuyLogPage" mnemonicParsing="false" onAction="#goToBuyLogPage" prefHeight="41.0" prefWidth="146.0" text="My Buy History" />
+                <Button mnemonicParsing="false" onAction="#viewDiscounts" prefHeight="41.0" prefWidth="146.0" text="My Discount Codes" />
             <Button mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="41.0" prefWidth="156.0" text="Go To Main Menu" />
-                <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="146.0" text="logout" />
+                <Button mnemonicParsing="false" onAction="#logout" prefHeight="41.0" prefWidth="146.0" text="logout" />
             </children>
         </VBox>
         <Label alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="161.0" layoutY="29.0" prefHeight="48.0" prefWidth="278.0" text="WELCOME CUSTOMER!" textAlignment="CENTER">
