--- a/src/main/java/graphics/fxml/ProductMenu.fxml
+++ b/src/main/java/graphics/fxml/ProductMenu.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -14,7 +13,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.ProductMenu">
+<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+          prefHeight="600.0" prefWidth="600.0" vgap="10.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.ProductMenu">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="198.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="376.0" minWidth="10.0" prefWidth="228.0" />
@@ -25,8 +25,8 @@
         <RowConstraints />
         <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="253.0" minHeight="10.0" prefHeight="126.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="232.0" minHeight="10.0" prefHeight="169.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="232.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="236.0" minHeight="10.0" prefHeight="236.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="232.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Label fx:id="productNameLabel" alignment="CENTER" graphicTextGap="10.0" prefHeight="82.0" prefWidth="200.0" text="Product Name" textAlignment="CENTER" textFill="#130e1b" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -34,7 +34,7 @@
                 <Font name="System Bold Italic" size="14.0" />
             </font>
         </Label>
-        <ImageView fx:id="imageview" fitHeight="144.0" fitWidth="197.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
+        <ImageView fx:id="imageview" fitHeight="146.0" fitWidth="202.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="2">
         </ImageView>
         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <Button alignment="CENTER" mnemonicParsing="false" onAction="#button" prefHeight="61.0" prefWidth="186.0" text="Add to Cart" GridPane.rowIndex="4" />
@@ -51,7 +51,8 @@
                 </TilePane>
             </children>
         </VBox>
-        <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
+        <ListView fx:id="listView" prefHeight="238.0" prefWidth="215.0" GridPane.rowIndex="3" />
+        <Button alignment="CENTER" mnemonicParsing="false" onAction="#back" prefHeight="44.0" prefWidth="116.0" text="Back" GridPane.rowIndex="1" />
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
