--- a/src/main/java/graphics/fxml/AllProductsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllProductsMenu.fxml
@@ -13,7 +13,7 @@
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AllProductsMenu">
    <children>
       <Button layoutX="24.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" text="back" />
-      <Button onAction="#performFilter" layoutX="14.0" layoutY="214.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Filter" />
+      <Button layoutX="14.0" layoutY="214.0" mnemonicParsing="false" onAction="#performFilter" prefHeight="32.0" prefWidth="106.0" text="Filter" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="79.0" prefHeight="22.0" prefWidth="89.0" text="Max Price">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -25,10 +25,10 @@
       <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
       <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="135.0" />
       <CheckBox fx:id="priceCheckBox" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
-      <Button onAction="#disableFilter" layoutX="138.0" layoutY="214.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
+      <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
       <CheckBox fx:id="averageRateCheckBox" layoutX="146.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
-      <Button onAction="#performSort" layoutX="14.0" layoutY="321.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Sort" />
-      <Button onAction="#disableSort" layoutX="138.0" layoutY="321.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
+      <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" prefHeight="32.0" prefWidth="106.0" text="Sort" />
+      <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
       <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="494.0">
          <columns>
             <TableColumn fx:id="nameColumn" prefWidth="75.0" text="ProductId" />
@@ -40,5 +40,6 @@
             <TableColumn fx:id="buttonColumn" prefWidth="72.0" text="View More" />
          </columns>
       </TableView>
+      <Button layoutX="138.0" layoutY="25.0" mnemonicParsing="false" onAction="#viewCart" prefHeight="38.0" prefWidth="83.0" text="View Cart" />
    </children>
 </AnchorPane>
