--- a/src/main/java/graphics/fxml/RegisterMenu.fxml
+++ b/src/main/java/graphics/fxml/RegisterMenu.fxml
@@ -10,7 +10,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
+<?import java.net.URL?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.RegisterMenu">
+    <stylesheets>
+        <URL value="@cssSheets/RegisterMenu.css" />
+    </stylesheets>
    <children>
       <Label layoutX="252.0" layoutY="49.0" text="REGISTER">
          <font>
