--- a/src/main/java/graphics/fxml/AdminMenu.fxml
+++ b/src/main/java/graphics/fxml/AdminMenu.fxml
@@ -33,7 +33,7 @@
                   <Font size="11.0" />
                </font></Button>
                 <Button mnemonicParsing="false" onAction="#goToManageRequestsMenu" prefHeight="37.0" prefWidth="145.0" text="Manage Requests" />
-            <Button layoutX="10.0" layoutY="143.0" mnemonicParsing="false" onAction="#goToManageCategoyMenu" prefHeight="36.0" prefWidth="145.0" text="Manage Categories" />
+            <Button layoutX="10.0" layoutY="143.0" mnemonicParsing="false" onAction="#goToManageCategoryMenu" prefHeight="36.0" prefWidth="145.0" text="Manage Categories" />
             <Button layoutX="10.0" layoutY="174.0" mnemonicParsing="false" onAction="#logout" prefHeight="31.0" prefWidth="145.0" text="logout" />
             </children>
         </VBox>
