--- a/src/main/java/graphics/fxml/SellerMenu.fxml
+++ b/src/main/java/graphics/fxml/SellerMenu.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
 <?import java.net.URL?>
-<AnchorPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.SellerMenu">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="398.0" prefWidth="528.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.SellerMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -15,7 +23,7 @@
     <children>
         <VBox layoutX="20.0" layoutY="109.0">
             <children>
-                <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="146.0" text="Edit Personal Info">
+                <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="154.0" text="Edit Personal Info">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#editPasswordField" text="Password" />
                         <MenuItem mnemonicParsing="false" onAction="#editNameField" text="Name" />
@@ -23,21 +31,22 @@
                         <MenuItem mnemonicParsing="false" onAction="#editBalanceField" text="Balance" />
                         <MenuItem mnemonicParsing="false" onAction="#editEmailField" text="E-mail" />
                         <MenuItem mnemonicParsing="false" onAction="#editNumberField" text="Number" />
-                  <MenuItem mnemonicParsing="false" onAction="#editCompanyField" text="Company" />
+                        <MenuItem mnemonicParsing="false" onAction="#editCompanyField" text="Company" />
                     </items>
                 </MenuButton>
-                <Button mnemonicParsing="false" onAction="#goToSellLogPage" prefHeight="36.0" prefWidth="145.0" text="My Sell History" />
-            <Button mnemonicParsing="false" onAction="#viewProducts" prefHeight="36.0" prefWidth="145.0" text="My Products" />
-            <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="146.0" text="My Offs">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#viewOffs" text="View My Offs" />
-                <MenuItem mnemonicParsing="false" onAction="#checkValidityOfOffId" text="Edit Off" />
-                  <MenuItem mnemonicParsing="false" onAction="#addOff" text="Add Off" />
-              </items>
-            </MenuButton>
-                <Button mnemonicParsing="false" onAction="#viewCategories" prefHeight="36.0" prefWidth="146.0" text="All Category" />
-            <Button mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="36.0" prefWidth="146.0" text="Go To Main Menu" />
-                <Button mnemonicParsing="false" onAction="#logout" prefHeight="35.0" prefWidth="146.0" text="logout" />
+                <Button mnemonicParsing="false" onAction="#goToSellLogPage" prefHeight="36.0" prefWidth="154.0" text="My Sell History" />
+                <Button mnemonicParsing="false" onAction="#viewProducts" prefHeight="36.0" prefWidth="154.0" text="My Products" />
+                <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="36.0" prefWidth="154.0" text="My Offs">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#viewOffs" text="View My Offs" />
+                        <MenuItem mnemonicParsing="false" onAction="#checkValidityOfOffId" text="Edit Off" />
+                        <MenuItem mnemonicParsing="false" onAction="#addOff" text="Add Off" />
+                    </items>
+                </MenuButton>
+                <Button mnemonicParsing="false" onAction="#viewCategories" prefHeight="36.0" prefWidth="154.0" text="All Category" />
+                <Button mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="36.0" prefWidth="154.0" text="Go To Main Menu" />
+                <Button mnemonicParsing="false" onAction="#goToRequestsMenu" prefHeight="35.0" prefWidth="154.0" text="Go to Requests Menu" />
+                <Button layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onAction="#logout" prefHeight="36.0" prefWidth="154.0" text="logout" />
             </children>
         </VBox>
         <Label alignment="CENTER" layoutX="19.0" layoutY="76.0" prefHeight="42.0" prefWidth="146.0" text="Account Access">
@@ -66,7 +75,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <Label alignment="CENTER" prefHeight="27.0" prefWidth="161.0" text="Personal Information">
@@ -90,8 +99,8 @@
                 <Label fx:id="familyNameLabel" prefHeight="18.0" prefWidth="279.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                 <Label fx:id="emailLabel" prefHeight="18.0" prefWidth="277.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                 <Label fx:id="numberLabel" prefHeight="18.0" prefWidth="248.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Label alignment="CENTER" prefHeight="18.0" prefWidth="67.0" text="company" GridPane.rowIndex="9" />
-            <Label fx:id="brandLabel" prefHeight="18.0" prefWidth="199.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                <Label alignment="CENTER" prefHeight="18.0" prefWidth="67.0" text="company" GridPane.rowIndex="9" />
+                <Label fx:id="brandLabel" prefHeight="18.0" prefWidth="199.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
             </children>
         </GridPane>
         <Separator layoutX="165.0" layoutY="106.0" orientation="VERTICAL" prefHeight="250.0" prefWidth="30.0" />
@@ -104,7 +113,7 @@
         <Separator layoutX="197.0" layoutY="300.0" prefHeight="3.0" prefWidth="326.0" />
         <Separator layoutX="197.0" layoutY="349.0" prefHeight="11.0" prefWidth="326.0" />
         <Separator layoutX="300.0" layoutY="116.0" orientation="VERTICAL" prefHeight="237.0" prefWidth="30.0" />
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="back" />
-      <Separator layoutX="197.0" layoutY="328.0" prefHeight="3.0" prefWidth="326.0" />
+        <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="back" />
+        <Separator layoutX="197.0" layoutY="328.0" prefHeight="3.0" prefWidth="326.0" />
     </children>
 </AnchorPane>
