--- a/src/main/java/graphics/fxml/CustomerMenu.fxml
+++ b/src/main/java/graphics/fxml/CustomerMenu.fxml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.CustomerMenu">
+<AnchorPane prefHeight="428.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.CustomerMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -30,7 +38,8 @@
                 <Button fx:id="goToBuyLogPage" mnemonicParsing="false" onAction="#goToBuyLogPage" prefHeight="54.0" prefWidth="154.0" text="My Buy History" />
                 <Button mnemonicParsing="false" onAction="#viewDiscounts" prefHeight="53.0" prefWidth="154.0" text="My Discount Codes" />
                 <Button mnemonicParsing="false" onAction="#goToMainMenu" prefHeight="54.0" prefWidth="154.0" text="Go To Main Menu" />
-                <Button mnemonicParsing="false" onAction="#logout" prefHeight="54.0" prefWidth="154.0" text="logout" />
+                <Button mnemonicParsing="false" onAction="#customerRequestMenu" prefHeight="54.0" prefWidth="154.0" text=" Request Menu" />
+                <Button layoutX="10.0" layoutY="243.0" mnemonicParsing="false" onAction="#logout" prefHeight="54.0" prefWidth="154.0" text="logout" />
             </children>
         </VBox>
         <Label alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="161.0" layoutY="29.0" prefHeight="48.0" prefWidth="278.0" text="WELCOME CUSTOMER!" textAlignment="CENTER">
