--- a/src/main/java/graphics/fxml/PerBuyLog.fxml
+++ b/src/main/java/graphics/fxml/PerBuyLog.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.PerBuyLog">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.PerBuyLog">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -13,31 +16,31 @@
         <URL value="@cssSheets/BackGround.css" />
     </stylesheets>
     <children>
-      <TableView fx:id="tableView" layoutX="14.0" layoutY="48.0" prefHeight="304.0" prefWidth="479.0">
-        <columns>
-          <TableColumn prefWidth="68.20001524686813" text="productId" />
-          <TableColumn prefWidth="111.79998779296875" text="Product Name" />
-            <TableColumn prefWidth="81.99998474121094" text="Brand" />
-            <TableColumn prefWidth="140.4000244140625" text="Price Per Product" />
-            <TableColumn prefWidth="74.79998779296875" text="Quantity" />
-        </columns>
-      </TableView>
-      <Label layoutX="21.0" layoutY="21.0" prefHeight="20.0" prefWidth="139.0" text="Here's Your Log :">
-         <font>
-            <Font name="Bookshelf Symbol 7" size="18.0" />
-         </font>
-      </Label>
-      <Label layoutX="514.0" layoutY="73.0" text="Total Price" />
-      <Label fx:id="paidMoney" alignment="CENTER" layoutX="514.0" layoutY="99.0" prefHeight="35.0" prefWidth="67.0" />
-      <Label layoutX="493.0" layoutY="151.0" text="Discount Amount" />
-      <Label fx:id="amountOfDiscount" alignment="CENTER" layoutX="501.0" layoutY="174.0" prefHeight="35.0" prefWidth="80.0" />
-      <Label layoutX="518.0" layoutY="234.0" prefHeight="18.0" prefWidth="56.0" text="Discount" />
-      <Label fx:id="discountUsed" alignment="CENTER" layoutX="508.0" layoutY="252.0" prefHeight="35.0" prefWidth="80.0" />
-      <Button layoutX="280.0" layoutY="360.0" mnemonicParsing="false" text="Back" />
-      <Label layoutX="442.0" layoutY="12.0" text="Date :" />
-      <Label fx:id="date" alignment="CENTER" layoutX="493.0" layoutY="7.0" prefHeight="26.0" prefWidth="88.0" />
-      <Label layoutX="177.0" layoutY="22.0" prefHeight="26.0" prefWidth="80.0" text="( Log Code :" />
-      <Label fx:id="logCode" alignment="CENTER" layoutX="254.0" layoutY="23.0" prefHeight="26.0" prefWidth="47.0" />
-      <Label layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="28.0" text=")" />
-   </children>
+        <TableView fx:id="tableView" layoutX="61.0" layoutY="69.0" prefHeight="325.0" prefWidth="479.0">
+            <columns>
+                <TableColumn prefWidth="68.20001524686813" text="productId" />
+                <TableColumn prefWidth="111.79998779296875" text="Product Name" />
+                <TableColumn prefWidth="81.99998474121094" text="Brand" />
+                <TableColumn prefWidth="140.4000244140625" text="Price Per Product" />
+                <TableColumn prefWidth="74.79998779296875" text="Quantity" />
+            </columns>
+        </TableView>
+        <Label layoutX="21.0" layoutY="21.0" prefHeight="23.0" prefWidth="237.0" text="Here's Your Log :">
+            <font>
+                <Font name="Bookshelf Symbol 7" size="18.0" />
+            </font>
+        </Label>
+        <Label layoutX="14.0" layoutY="426.0" prefHeight="35.0" prefWidth="100.0" text="Total Price :" />
+        <Label fx:id="paidMoney" alignment="CENTER" layoutX="140.0" layoutY="426.0" prefHeight="35.0" prefWidth="67.0" />
+        <Label layoutX="7.0" layoutY="476.0" prefHeight="51.0" prefWidth="162.0" text="Discount Amount" />
+        <Label fx:id="amountOfDiscount" alignment="CENTER" layoutX="204.0" layoutY="480.0" prefHeight="43.0" prefWidth="100.0" />
+        <Label layoutX="8.0" layoutY="542.0" prefHeight="35.0" prefWidth="80.0" text="Discount :" />
+        <Label fx:id="discountUsed" alignment="CENTER" layoutX="129.0" layoutY="542.0" prefHeight="51.0" prefWidth="145.0" />
+        <Button layoutX="506.0" layoutY="556.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="80.0" text="Back" />
+        <Label layoutX="329.0" layoutY="440.0" prefHeight="35.0" prefWidth="145.0" text="Date :" />
+        <Label fx:id="date" alignment="CENTER" layoutX="417.0" layoutY="432.0" prefHeight="51.0" prefWidth="153.0" />
+        <Label alignment="CENTER_RIGHT" layoutX="282.0" layoutY="22.0" prefHeight="26.0" prefWidth="80.0" text="( Log Code :" />
+        <Label fx:id="logCode" alignment="CENTER_RIGHT" layoutX="370.0" layoutY="22.0" prefHeight="26.0" prefWidth="47.0" />
+        <Label alignment="CENTER_RIGHT" layoutX="300.0" layoutY="22.0" prefHeight="26.0" prefWidth="133.0" text=")" />
+    </children>
 </AnchorPane>
